--- a/public/items/30_collaboration_items/index.html
+++ b/public/items/30_collaboration_items/index.html
@@ -1643,9 +1643,9 @@ DO NOT SPEND MONEY ON NFT JUST TO WIN</p>
 <ul>
 <li>🌱 Brave Seedling (rarity 1-800): HP + 1D5;</li>
 <li>❤️  Brave Seedling (rarity 22-101): HP + 2D5,</li>
-<li>💪   Brave Seedling (rarity 1-21): HP + 2D5, CON + 1D5
-Seedlings rarity list https://bit.ly/3Q6Jmgd</li>
+<li>💪   Brave Seedling (rarity 1-21): HP + 2D5, CON + 1D5</li>
 </ul>
+<p>Seedlings rarity list <a href="https://bit.ly/3Q6Jmgd">https://bit.ly/3Q6Jmgd</a></p>
 <h3 id="familiars">FAMILIARS</h3>
 <h4 id="1-slimes-twitter-handle-chia_slime">1) SLIMES ( Twitter handle: @ chia_slime ):</h4>
 <ul>
