--- a/public/items/90_ChiaSlime/index.html
+++ b/public/items/90_ChiaSlime/index.html
@@ -1699,6 +1699,26 @@
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/beta/build/images/105.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x430c69af9100eb116959afac53e23f0639ba0f3012e1a9b2b7e1eb22b060ea55"><strong>Name:</strong> Chia Slime #105</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> Blopy</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Alpha-Green-00af29</div>
+<div><strong>Drop Set:</strong> Beta</div>
+<div><strong>Floor:</strong> Mountains</div>
+<div><strong>Hidden Power:</strong> None None</div>
+<div><strong>Mood:</strong> Blank-Right</div>
+<div><strong>Narrative Block:</strong> The Beginning</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Cloudy</div>
+<div><strong>Stickyness:</strong> 18</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 91</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://chiaslimes.s3.us-west-1.amazonaws.com/beta/build/images/106.png"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x0e360fd1cbd20e8c076998f179d8f8c54c5d18f53198813fc2c89d8c8bac99fe"><strong>Name:</strong> Chia Slime #106</a></div>
 <div><strong>Collection:</strong> Chia Slimes</div>
@@ -1736,26 +1756,6 @@
 <div><strong>Stickyness:</strong> 67</div>
 <div><strong>Volume:</strong> 1</div>
 <div><strong>Weight:</strong> 10</div>
-<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/beta/build/images/108.png"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x931cf05516fae5af24823d5a91af7d07487c8c66e331abef36ab9997fe4f09e2"><strong>Name:</strong> Chia Slime #108</a></div>
-<div><strong>Collection:</strong> Chia Slimes</div>
-<div><strong>Acs1:</strong> More Shine</div>
-<div><strong>Acs2:</strong> Blopy</div>
-<div><strong>Acs3:</strong> None</div>
-<div><strong>Color:</strong> Beta-Yellow-fffc01</div>
-<div><strong>Drop Set:</strong> Beta</div>
-<div><strong>Floor:</strong> Mountains</div>
-<div><strong>Hidden Power:</strong> None None</div>
-<div><strong>Mood:</strong> Laugh-Left</div>
-<div><strong>Narrative Block:</strong> The Beginning</div>
-<div><strong>Other Info:</strong> None</div>
-<div><strong>Sky:</strong> Cloudy</div>
-<div><strong>Stickyness:</strong> 62</div>
-<div><strong>Volume:</strong> 1</div>
-<div><strong>Weight:</strong> 76</div>
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
@@ -4679,6 +4679,46 @@
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/266.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x2dfc11454359e570359b2861a51e0b46d83ef91c65b9a213138daff916d1c965"><strong>Name:</strong> Chia Slime #266</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> RockSpikes</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemGray-565655</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave4-WF</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Confident-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 77</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 53</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/269.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x25fbe2913209c86c245ec7f8412589f3c91bc92cfcf517513e13c166816561c7"><strong>Name:</strong> Chia Slime #269</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemGray-565655</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave3-SW-M</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Cocky-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 55</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 56</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/27.png"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x127dc38b3a4f8d70539294a9c9eedf1eefffa0b7d06c2059a6ba16597804219c"><strong>Name:</strong> Chia Slime #27</a></div>
 <div><strong>Collection:</strong> Chia Slimes</div>
@@ -4699,6 +4739,106 @@
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/271.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xc8031eb7acea08679262f370725923376130eea6b0c00e2845e383be16913e00"><strong>Name:</strong> Chia Slime #271</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> FoundSomeTreasure</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemObsid-3b215a</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave3-SW-M</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Cocky-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> PS9</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 81</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 18</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/273.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xb99128f560c220ffe2842e5d94e8fb278d52be86e9c906b5215d9680851ab9e1"><strong>Name:</strong> Chia Slime #273</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> Mithril Ore</div>
+<div><strong>Color:</strong> Rock-RockyMuddy-725930</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave2-SW</div>
+<div><strong>Hidden Power:</strong> Heal</div>
+<div><strong>Mood:</strong> Cocky-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Foggy Night</div>
+<div><strong>Stickyness:</strong> 98</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 75</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/275.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x0c48d420129b8ecd3ba4f53c52300d29dd7108922fff5e8b632c3419a5d8e8ba"><strong>Name:</strong> Chia Slime #275</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> RockSpikes</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemGray-565655</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave1</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Confident-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 22</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 32</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/277.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x95bd70fb2e3f69a0ac3f81b4b0376fd03e19aad5662a34bd34f544f14afbe18c"><strong>Name:</strong> Chia Slime #277</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemGray-565655</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Mountains</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Strong-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 14</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 57</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/279.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x959afb868add90eef34a1265503889182ce901029681d60246372f052abfe2a9"><strong>Name:</strong> Chia Slime #279</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemMith-0f1d4a-</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Mountains</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Confident-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 29</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 39</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/28.png"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xdd776c69c83ced40551d55a159ac788fbfe8a935653d62f24a491d62ed0c47fb"><strong>Name:</strong> Chia Slime #28</a></div>
 <div><strong>Collection:</strong> Chia Slimes</div>
@@ -4716,6 +4856,86 @@
 <div><strong>Stickyness:</strong> 50</div>
 <div><strong>Volume:</strong> 1</div>
 <div><strong>Weight:</strong> 56</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/281.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xe4678d6f31db9dff0c81e7ceabccf0817a132e6eb985d4f021b51ce194374504"><strong>Name:</strong> Chia Slime #281</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> RockSpikes</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-MoltenIron-909596</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave1</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Cocky-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 58</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 56</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/283.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x18343f8b2fa878ee8b76bd12038d7152788f3c738f142c0007d2d976775718d4"><strong>Name:</strong> Chia Slime #283</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> GolemSpikes</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-RockyBrown-5b482a</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave3-SW-M</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Confident-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 91</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 54</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/285.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xce3928381d222f0967cf63d8a43bb7067c58cb4601cfbee66343201ed02bb559"><strong>Name:</strong> Chia Slime #285</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-RockyBrown-5b482a</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Mountains</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Strong-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 6</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 87</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/287.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x35095f390da5616d7b004cfb7190d5ebb1a446d8dc3c421af8901974449a102f"><strong>Name:</strong> Chia Slime #287</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-RockyMuddy-725930</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Mountains</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Strong-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Foggy Night</div>
+<div><strong>Stickyness:</strong> 67</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 25</div>
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
